--- a/src/scss/react-selectr.scss
+++ b/src/scss/react-selectr.scss
@@ -7,6 +7,7 @@
 // Variable
 $grayLight: rgb(236, 236, 236);
 $orange: #f17e39;
+$shadow: rgba(0, 0, 0, 0.15);
 
 .rselectr{
   &-container{
@@ -21,6 +22,18 @@ $orange: #f17e39;
     padding: 6px 30px 6px 10px;
     min-height: 40px;
     line-height: 25px;
+    outline: none;
+    transition: all 0.3s;
+    box-shadow: 0px 0px 0px $shadow;
+    &.isfocus{
+      box-shadow: 0px 0px 10px $shadow;
+      border: 1px solid #f39760;
+    }
+    &.isdisabled{
+      background: #ccc;
+      border: 1px solid #999;
+      cursor: no-drop;
+    }
   }
   &-control:after{
     content: '';
@@ -36,13 +49,20 @@ $orange: #f17e39;
     margin-top: -3px;
   }
   &-menu{
-    padding-top: 50px;
+    padding-top: 40px;
     border: 1px solid $grayLight;
     border-radius: 4px;
     position: absolute;
     z-index: 1;
     background: #fff;
     width: 100%;
+    &.dropdown{
+      // box-shadow: 0px 5px 10px $shadow;
+    }
+    &.dropup{
+      bottom: 44px;
+      // box-shadow: 0px -5px 10px $shadow;
+    }
   }
   &-searchInput-wrapper{
     padding: 6px;
@@ -73,7 +93,7 @@ $orange: #f17e39;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    
+    border-top: 1px solid rgba(204, 204, 204, 0.17);
     &.isFocus{
       background-color: rgba($orange, 0.1);
     }
@@ -82,10 +102,13 @@ $orange: #f17e39;
     }
   }
   &-optionGroup{
-    padding: 6px 12px;
+    padding: 0px;
   }
   &-optionGroupLabel{
     font-weight: bold;
+    padding: 6px 12px;
+    display: block;
+    background: #cac9c9;
   }
   &-value-wrap{
     display: inline-block;
